<resources>
    <string name="app_name">AutoRR</string>
    <string name="project_name">Automatic Respiration&amp;Heart Rate\nMeasurement System</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="stop">Stop</string>
    <string name="placeholderRR_text">Click the start button to start the data acquisition process and get the respiration rate value</string>
    <string name="placeholderHR_text">Click the start button to start the data acquisition process and get the heart rate value</string>
    <string name="wait_text">Wait for the data acquisition to be finished … </string>
    <string name="wait2RR_text">Calculating respiration rate from acquired data, please wait … \n\n(Its okay to get up now)</string>
    <string name="wait2HR_text">Calculating heart rate from acquired data, please wait … \n\n(Its okay to get up now)</string>
    <string name="resultRR_text">Predicted respiration rate value:</string>
    <string name="resultHR_text">Predicted heart rate value:</string>
    <string name="_0_100">0/100</string>
    <string name="_100_100">100/100</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_page">Login Page</string>
    <string name="respiration_rate_value">Respiration rate value</string>
    <string name="heart_rate_value">Heart rate value</string>
    <string name="send">Send</string>
    <string name="generate">Generate</string>
    <string name="websocket_uid">Websocket UID</string>
    <string name="connect">Connect</string>
    <string name="websocket_url">Websocket URL</string>
    <string name="change">Change calculation type</string>
</resources>