<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:layout_marginTop="30dp"
        android:textSize="23sp"
        android:textAlignment="center"
        android:textColor="?colorSecondary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?colorSecondaryVariant"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/project_name" />

    <TextView
        android:id="@+id/progress_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/placeholder_text"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_name"
        app:layout_constraintBottom_toTopOf="@+id/loading_bar" />

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/_0_100"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/loading_bar"
        app:layout_constraintEnd_toEndOf="@id/loading_bar"
        app:layout_constraintBottom_toTopOf="@id/loading_bar" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loading_bar"
        android:indeterminate="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:layout_marginBottom="10dp"
        app:trackThickness="10dp"
        app:trackCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@id/controller_button"
        app:layout_constraintEnd_toEndOf="@id/controller_button"
        app:layout_constraintBottom_toTopOf="@+id/controller_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/controller_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>